--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,10 +1,12 @@
 <!-- polls/templates/polls/detail.html -->
+ {% extends 'base_generic.html' %}
 
-<h1>{{ question.question_text }}</h1>
+{% block content%}
+    <h1>{{ question.question_text }}</h1>
 
-{% if error_message %}
-<p><strong>{{ error_message }}</strong></p>
-{% endif %}
+    {% if error_message %}
+    <p><strong>{{ error_message }}</strong></p>
+    {% endif %}
 
 <form action="{% url 'polls:vote' question.id %}" method="post">
     {% csrf_token %}
@@ -14,3 +16,5 @@
     {% endfor %}
     <button type="submit">Vote</button>
 </form>
+
+{% endblock%}
